cluster/apps/emqx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx
  namespace: emqx
  annotations:
    haproxy.org/allow-list: "${HAPROXY_WHITELIST}"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "DENY"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
  - host: "emqx.${SECRET_DEFAULT_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: emqx-dashboard
            port:
              number: 18083
        path: /
        pathType: Prefix
  tls:
  - secretName: "${SECRET_DEFAULT_DOMAIN_CERT}"
